# Flash-Attn-wheels

./: README.md  app.js  index.html  package.json  pyproject.toml  wheels.js
mlwheels/: __init__.py  cli.py  detector.py
