[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwheels"
version = "0.1.0"
description = "Auto-detect and install pre-built wheels for Flash Attention & vLLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["flash-attention", "vllm", "cuda", "pytorch", "wheels"]

[project.scripts]
mlwheels = "mlwheels.cli:main"

[project.urls]
Homepage = "https://rs545837.github.io/Flash-Attn-wheels/"
Repository = "https://github.com/rs545837/Flash-Attn-wheels"

[tool.setuptools.packages.find]
include = ["mlwheels*"]
